[package]
name = "markdown-blob-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = { version = "0.6.0", features = ["http"] }
leptos = { version = "0.8.2", features = ["csr"] }
leptos_router = "0.8.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
web-sys = { version = "0.3.77", features = ["Storage", "Window"] }
